--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "version": "0.9.0",
-  "name": "@filou/ui",
+  "name": "@filou/core",
   "description": "",
   "author": "Philipp Achenbach <olymp@philipp-achenbach.de>",
   "contributors": [
