--- a/packages/loader/package.json
+++ b/packages/loader/package.json
@@ -9,6 +9,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@filou/grid": "^0.9.1",
     "react-fela": "^6.2.1",
     "react-swipeable": "^4.2.0",
     "tinycolor2": "^1.4.1"
