--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "private": true,
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "version": "0.9.0",
   "name": "filou",
   "description": "",
@@ -20,7 +22,13 @@
     "type": "git",
     "url": "https://github.com/bkniffler/filou.git"
   },
-  "keywords": ["react", "universal", "javascript", "express", "webpack"],
+  "keywords": [
+    "react",
+    "universal",
+    "javascript",
+    "express",
+    "webpack"
+  ],
   "author": "Benjamin Kniffler <bkniffler@me.com>",
   "license": "MIT",
   "bugs": {
@@ -29,9 +37,9 @@
   "homepage": "https://github.com/bkniffler/filou#readme",
   "dependencies": {},
   "devDependencies": {
-    "@alpacka/cli": "^0.9.19",
+    "@alpacka/cli": "^0.9.20",
     "@alpacka/eslint-config": "^0.9.12",
-    "@alpacka/plugin-babel-react": "^0.9.14",
+    "@alpacka/plugin-babel-react": "^0.9.21",
     "jest": "^22.3.0",
     "lerna": "^2.9.0"
   }
