--- a/packages/updater/package.json
+++ b/packages/updater/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.9.6",
+  "version": "0.9.9",
   "name": "@filou/updater",
   "description": "",
   "author": "Benjamin Kniffler <bkniffler@me.com>",
@@ -7,6 +7,5 @@
     "Benjamin Kniffler <bkniffler@me.com>",
     "Philipp Achenbach <olymp@philipp-achenbach.de>"
   ],
-  "license": "MIT",
-  "dependencies": {}
+  "license": "MIT"
 }
