--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "private": true,
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "version": "0.9.0",
   "name": "filou",
   "description": "",
@@ -20,18 +22,27 @@
     "type": "git",
     "url": "https://github.com/bkniffler/filou.git"
   },
-  "keywords": ["react", "universal", "javascript", "express", "webpack"],
+  "keywords": [
+    "react",
+    "universal",
+    "javascript",
+    "express",
+    "webpack"
+  ],
   "author": "Benjamin Kniffler <bkniffler@me.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/bkniffler/filou/issues"
   },
   "homepage": "https://github.com/bkniffler/filou#readme",
-  "dependencies": {},
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
+  },
   "devDependencies": {
-    "@alpacka/cli": "^0.10.4",
-    "@alpacka/eslint-config": "^0.10.4",
-    "@alpacka/plugin-babel-react": "^0.10.4",
+    "@alpacka/cli": "^0.12.11",
+    "@alpacka/eslint-config": "^0.12.0",
+    "@alpacka/plugin-babel-react": "^0.12.11",
     "jest": "^22.3.0",
     "lerna": "^3.0.0-alpha.1"
   }
