--- a/package.json
+++ b/package.json
@@ -36,14 +36,15 @@
   },
   "homepage": "https://github.com/bkniffler/filou#readme",
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0"
   },
   "devDependencies": {
-    "@alpacka/cli": "^0.12.11",
-    "@alpacka/eslint-config": "^0.12.0",
-    "@alpacka/plugin-babel-react": "^0.12.11",
-    "jest": "^22.3.0",
-    "lerna": "^3.0.0-alpha.1"
+    "@alpacka/cli": "^0.12.22",
+    "@alpacka/eslint-config": "^0.12.21",
+    "@alpacka/plugin-babel-react": "^0.12.22",
+    "eslint": "^4.19.1",
+    "jest": "^22.4.3",
+    "lerna": "^2.9.1"
   }
 }
