--- a/packages/slate/package.json
+++ b/packages/slate/package.json
@@ -22,7 +22,7 @@
     "slate-edit-blockquote": "^0.6.0",
     "slate-edit-code": "^0.15.0",
     "slate-edit-list": "^0.11.2",
-    "slate-edit-table": "^0.14.3",
+    "slate-edit-table": "^0.15.0-alpha.4",
     "slate-hyperscript": "^0.5.6",
     "slate-paste-linkify": "^0.5.0",
     "slate-plain-serializer": "^0.5.6",
