--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
+  "workspaces": ["packages/*", "../powr/packages/*", "../alpacka/packages/*"],
   "version": "0.9.0",
   "name": "filou",
   "description": "",
@@ -22,13 +20,7 @@
     "type": "git",
     "url": "https://github.com/bkniffler/filou.git"
   },
-  "keywords": [
-    "react",
-    "universal",
-    "javascript",
-    "express",
-    "webpack"
-  ],
+  "keywords": ["react", "universal", "javascript", "express", "webpack"],
   "author": "Benjamin Kniffler <bkniffler@me.com>",
   "license": "MIT",
   "bugs": {
@@ -36,15 +28,15 @@
   },
   "homepage": "https://github.com/bkniffler/filou#readme",
   "dependencies": {
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0"
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
   },
   "devDependencies": {
-    "@alpacka/cli": "^0.12.22",
-    "@alpacka/eslint-config": "^0.12.21",
-    "@alpacka/plugin-babel-react": "^0.12.22",
+    "@alpacka/cli": "^0.12.36",
+    "@alpacka/eslint-config": "^0.12.36",
+    "@alpacka/plugin-babel-react": "^0.12.36",
     "eslint": "^4.19.1",
     "jest": "^22.4.3",
-    "lerna": "^2.9.1"
+    "lerna": "^2.11.0"
   }
 }
