--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "version": "0.9.1",
+  "version": "0.9.3",
   "name": "filou",
   "main": "lib/index.js",
   "module": "es/index.js",
-  "typings": "lib/index.d.ts",
   "files": [
-    "dist",
     "lib",
     "es"
   ],
@@ -13,9 +11,10 @@
   "scripts": {
     "build": "npm-run-all --parallel build:*",
     "clean": "npm-run-all --parallel build:*",
+    "watch": "rimraf es && NODE_ENV=development BABEL_ENV=es babel src --out-dir es --watch",
+    "prepublishOnly": "npm run build",
     "build:es": "rimraf es && BABEL_ENV=es babel src --out-dir es",
     "build:lib": "rimraf lib && BABEL_ENV=lib babel src --out-dir lib",
-    "watch": "rollup -c -w",
     "test": "jest",
     "codecov": "codecov",
     "up": "yarn upgrade-interactive --latest",
@@ -58,11 +57,19 @@
   },
   "devDependencies": {
     "@babel/cli": "7.0.0-beta.49",
+    "@babel/core": "^7.0.0-beta.46",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.46",
+    "@babel/preset-env": "^7.0.0-beta.46",
+    "@babel/preset-react": "^7.0.0-beta.46",
+    "@babel/preset-stage-0": "^7.0.0-beta.49",
     "antd": "^3.6.1",
-    "babel-preset-orgilla": "^0.13.0",
+    "babel-eslint": "^8.2.3",
+    "babel-plugin-import-7": "^1.6.7",
+    "babel-plugin-lodash": "3.3.3",
+    "babel-plugin-transform-imports": "^1.5.0",
     "date-fns": "^1.29.0",
     "eslint": "^4.19.1",
-    "eslint-config-orgilla": "^0.13.0",
+    "eslint-config-prettier": "^2.9.0",
     "npm-run-all": "^4.1.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
