--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "private": true,
-  "workspaces": ["packages/*", "../powr/packages/*", "../alpacka/packages/*"],
+  "workspaces": [
+    "packages/*",
+    "../powr/packages/*",
+    "../alpacka/packages/*"
+  ],
   "version": "0.9.0",
   "name": "filou",
   "description": "",
@@ -20,7 +24,13 @@
     "type": "git",
     "url": "https://github.com/bkniffler/filou.git"
   },
-  "keywords": ["react", "universal", "javascript", "express", "webpack"],
+  "keywords": [
+    "react",
+    "universal",
+    "javascript",
+    "express",
+    "webpack"
+  ],
   "author": "Benjamin Kniffler <bkniffler@me.com>",
   "license": "MIT",
   "bugs": {
@@ -28,15 +38,15 @@
   },
   "homepage": "https://github.com/bkniffler/filou#readme",
   "dependencies": {
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0"
   },
   "devDependencies": {
     "@alpacka/cli": "^0.12.36",
     "@alpacka/eslint-config": "^0.12.36",
     "@alpacka/plugin-babel-react": "^0.12.36",
     "eslint": "^4.19.1",
-    "jest": "^22.4.3",
+    "jest": "^23.1.0",
     "lerna": "^2.11.0"
   }
 }
