--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "private": true,
   "workspaces": [
+    "packages/*"
+  ],
+  "workspaces2": [
     "packages/*",
     "../powr/packages/*",
     "../alpacka/packages/*"
@@ -9,44 +12,52 @@
   "name": "filou",
   "description": "",
   "scripts": {
-    "test": "jest",
-    "watch": "alpacka watch -c babel-react",
-    "codecov": "codecov",
+    "build": "gulp build",
+    "watch": "gulp watch",
+    "clean": "del packages/**/*.js",
+    "prepublishOnly": "npm run build",
     "up": "yarn upgrade-interactive --latest",
-    "init": "lerna init --independent",
-    "lb": "lerna bootstrap",
-    "lp": "lerna publish",
-    "lpf": "lerna publish --force-publish --access public",
-    "lc": "lerna exec --concurrency 1 -- del 'package-lock.json' 'node_modules'"
+    "rename": "rename packages/**/*.js {{f}}.es6"
   },
-  "engines": {},
   "repository": {
     "type": "git",
-    "url": "https://github.com/bkniffler/filou.git"
+    "url": "https://github.com/orgilla/filou.git"
   },
   "keywords": [
     "react",
-    "universal",
-    "javascript",
-    "express",
-    "webpack"
+    "fela",
+    "ui",
+    "javascript"
   ],
-  "author": "Benjamin Kniffler <bkniffler@me.com>",
+  "author": "Orgilla <hi@orgil.la>",
+  "contributors": [
+    "Benjamin Kniffler <bkniffler@me.com>",
+    "Philipp Achenbach <github@philipp-achenbach.de>"
+  ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/bkniffler/filou/issues"
+    "url": "https://github.com/orgilla/filou/issues"
   },
-  "homepage": "https://github.com/bkniffler/filou#readme",
-  "dependencies": {
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@alpacka/cli": "^0.12.36",
-    "@alpacka/eslint-config": "^0.12.36",
-    "@alpacka/plugin-babel-react": "^0.12.36",
+    "@babel/cli": "7.0.0-beta.49",
+    "@babel/core": "^7.0.0-beta.46",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.46",
+    "@babel/preset-env": "^7.0.0-beta.46",
+    "@babel/preset-react": "^7.0.0-beta.46",
+    "@babel/preset-stage-0": "^7.0.0-beta.49",
+    "babel-eslint": "^8.2.3",
+    "babel-plugin-import-7": "^1.6.7",
+    "babel-plugin-lodash": "3.3.3",
+    "babel-plugin-transform-imports": "^1.5.0",
     "eslint": "^4.19.1",
-    "jest": "^23.1.0",
-    "lerna": "^2.11.0"
+    "eslint-config-prettier": "^2.9.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^8.0.0-beta.2",
+    "gulp-changed": "^3.2.0",
+    "gulp-debug": "^4.0.0",
+    "gulp-plumber": "^1.2.0",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-watch": "^5.0.0"
   }
 }
