--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,9 +9,12 @@
     "**/.hg": true,
     "**/CVS": true,
     "**/.DS_Store": true,
+    "**/*.js.map": true,
     "**/*.js": {
       "when": "$(basename).es6"
-    },
-    "**/*.js.map": true
+    }
+  },
+  "files.associations": {
+    ".babelrc": "json5"
   }
 }
