--- a/package.json
+++ b/package.json
@@ -4,11 +4,6 @@
   "workspaces": [
     "packages/*"
   ],
-  "workspaces2": [
-    "packages/*",
-    "../powr/packages/*",
-    "../alpacka/packages/*"
-  ],
   "version": "0.9.0",
   "description": "",
   "scripts": {
@@ -39,22 +34,29 @@
   "bugs": {
     "url": "https://github.com/orgilla/filou/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "date-fns": "^1.29.0",
+    "prop-types": "^15.6.1",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "recompose": "0.26"
+  },
   "devDependencies": {
-    "@babel/cli": "7.0.0-beta.49",
-    "@babel/core": "^7.0.0-beta.49",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.49",
-    "@babel/preset-env": "^7.0.0-beta.49",
-    "@babel/preset-react": "^7.0.0-beta.49",
-    "@babel/preset-stage-0": "^7.0.0-beta.49",
-    "babel-eslint": "^8.2.3",
-    "babel-plugin-import-7": "^1.6.7",
+    "@babel/runtime": "^7.0.0-beta.49",
+    "babel-core": "^6.26.3",
+    "babel-plugin-import": "^1.6.7",
     "babel-plugin-lodash": "3.3.3",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-imports": "^1.5.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^8.0.0-beta.2",
+    "gulp-babel": "^7.0.1",
     "gulp-changed": "^3.2.0",
     "gulp-debug": "^4.0.0",
     "gulp-plumber": "^1.2.0",
@@ -62,5 +64,14 @@
     "gulp-watch": "^5.0.0",
     "lerna": "^2.11.0",
     "require-json5": "^1.0.2"
+  },
+  "devDependenciesBabel7": {
+    "@babel/cli": "7.0.0-beta.49",
+    "@babel/core": "^7.0.0-beta.49",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.49",
+    "@babel/preset-env": "^7.0.0-beta.49",
+    "@babel/preset-react": "^7.0.0-beta.49",
+    "@babel/preset-stage-0": "^7.0.0-beta.49",
+    "gulp-babel": "^8.0.0-beta.2"
   }
 }
