--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,13 @@
 {
-  "extends": ["prettier", "prettier/react", "prettier/standard"],
-  "parserOptions": {
-    "ecmaVersion": 2017,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "experimentalObjectRestSpread": true,
-      "jsx": true
-    }
+  "parser": "babel-eslint",
+  "extends": ["airbnb", "prettier", "prettier/react"],
+  "env": {
+    "browser": true,
+    "node": true,
+    "jest": true
+  },
+  "rules": {
+    "react/prop-types": 0,
+    "react/jsx-filename-extension": 0
   }
 }
