--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@babel/runtime": "^7.0.0-beta.49",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.0.1",
     "babel-plugin-import": "^1.6.7",
     "babel-plugin-lodash": "3.3.3",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
@@ -54,7 +55,11 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "eslint": "^4.19.1",
-    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-airbnb": "^16.0.0",
+    "eslint-config-prettier": "^2.6.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
     "gulp-changed": "^3.2.0",
@@ -63,7 +68,8 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-watch": "^5.0.0",
     "lerna": "^2.11.0",
-    "require-json5": "^1.0.2"
+    "require-json5": "^1.0.2",
+    "prettier-eslint": "^8.2.0"
   },
   "devDependenciesBabel7": {
     "@babel/cli": "7.0.0-beta.49",
