--- a/packages/static/package.json
+++ b/packages/static/package.json
@@ -7,5 +7,8 @@
     "Benjamin Kniffler <bkniffler@me.com>",
     "Philipp Achenbach <olymp@philipp-achenbach.de>"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "slugify": "^1.3.0"
+  }
 }
