--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
   },
   "rules": {
     "react/prop-types": 0,
-    "react/jsx-filename-extension": 0
+    "react/jsx-filename-extension": 0,
+    "import/no-extraneous-dependencies": 0
   }
 }
