--- a/package.json
+++ b/package.json
@@ -42,13 +42,16 @@
     "recompose": "0.26"
   },
   "devDependencies": {
-    "@babel/runtime": "^7.0.0-beta.49",
+    "@babel/runtime": "^7.0.0-beta.52",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.0.1",
     "babel-plugin-import": "^1.6.7",
-    "babel-plugin-lodash": "3.3.3",
+    "babel-plugin-lodash": "3.3.4",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-imports": "^1.5.0",
+    "babel-plugin-transform-react-constant-elements": "^6.23.0",
+    "babel-plugin-transform-react-inline-elements": "^6.22.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
@@ -68,8 +71,8 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-watch": "^5.0.0",
     "lerna": "^2.11.0",
-    "require-json5": "^1.0.2",
-    "prettier-eslint": "^8.2.0"
+    "prettier-eslint": "^8.2.0",
+    "require-json5": "^1.0.2"
   },
   "devDependenciesBabel7": {
     "@babel/cli": "7.0.0-beta.49",
