--- a/packages/static/package.json
+++ b/packages/static/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.9.24",
+  "version": "0.9.30",
   "name": "@filou/static",
   "description": "",
   "author": "Benjamin Kniffler <bkniffler@me.com>",
@@ -9,6 +9,11 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "slugify": "^1.3.0"
+    "react-sticky": "^6.0.3",
+    "slugify": "^1.3.0",
+    "webfontloader": "^1.6.28"
+  },
+  "devDependencies": {
+    "react-static": "^5.9.7"
   }
 }
