--- a/packages/static-server/package.json
+++ b/packages/static-server/package.json
@@ -15,6 +15,7 @@
     "evernote": "^2.0.5",
     "front-matter": "^2.3.0",
     "fs-extra": "^6.0.1",
+    "glob": "^7.1.2",
     "hast-util-to-mdast": "^2.1.0",
     "mdast-squeeze-paragraphs": "^3.0.2",
     "mime": "^2.3.1",
