--- a/packages/static/package.json
+++ b/packages/static/package.json
@@ -9,6 +9,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "react-markdown": "^3.3.4",
     "react-sticky": "^6.0.3",
     "slugify": "^1.3.0",
     "webfontloader": "^1.6.28"
