--- a/packages/static/package.json
+++ b/packages/static/package.json
@@ -9,6 +9,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "google-map-react": "^1.0.5",
     "react-markdown": "^3.3.4",
     "react-sticky": "^6.0.3",
     "slugify": "^1.3.0",
