--- a/packages/evernote/package.json
+++ b/packages/evernote/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.52",
     "axios": "^0.18.0",
+    "cloudinary": "^1.11.0",
     "date-fns": "^1.29.0",
     "evernote": "^2.0.5",
     "fs-extra": "^6.0.1",
