--- a/packages/@/package.json
+++ b/packages/@/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.11.0",
+  "version": "0.11.7",
   "name": "filou",
   "description": "",
   "author": "Orgilla <hi@orgil.la>",
@@ -10,17 +10,27 @@
   "license": "MIT",
   "dependencies": {
     "@filou/core": "^0.11.0",
-    "fela": "^6.1.8",
-    "fela-monolithic": "^5.0.22",
+    "fela": "^6.2.0",
+    "fela-monolithic": "^5.0.24",
     "fela-plugin-custom-property": "^7.0.3",
-    "fela-plugin-embedded": "^5.2.8",
-    "fela-plugin-extend": "^6.0.6",
+    "fela-plugin-embedded": "^5.2.10",
+    "fela-plugin-extend": "^6.0.8",
     "fela-plugin-fallback-value": "^5.0.18",
     "fela-plugin-friendly-pseudo-class": "^5.0.17",
     "fela-plugin-named-keys": "^1.0.3",
     "fela-plugin-prefixer": "^5.0.19",
     "fela-plugin-unit": "^5.0.17",
-    "react-fela": "^7.3.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-fela": "^8.0.0",
     "tinycolor2": "^1.4.1"
+  },
+  "devDependencies": {
+    "@babel/runtime": "^7.0.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.15",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
+    "gulp-watch": "^5.0.1"
   }
 }
