--- a/packages/evernote/package.json
+++ b/packages/evernote/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.11.21",
+  "version": "0.11.24",
   "name": "@filou/evernote",
   "description": "",
   "author": "Benjamin Kniffler <bkniffler@me.com>",
@@ -8,16 +8,24 @@
     "Philipp Achenbach <olymp@philipp-achenbach.de>"
   ],
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.52",
+    "@babel/runtime": "^7.0.0",
     "axios": "^0.18.0",
+    "babel-runtime": "^6.26.0",
+    "chokidar": "^2.0.4",
     "cloudinary": "^1.11.0",
     "date-fns": "^1.29.0",
     "evernote": "^2.0.5",
-    "fs-extra": "^6.0.1",
-    "glob": "^7.1.2",
+    "fs-extra": "^7.0.0",
+    "glob": "^7.1.3",
     "himalaya": "^1.1.0",
+    "lodash": "^4.17.10",
     "mime": "^2.3.1",
-    "node-dir": "^0.1.17"
+    "node-dir": "^0.1.17",
+    "progress": "^2.0.0",
+    "slugify": "^1.3.1"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "react-static": "^5.9.7"
+  }
 }
