--- a/packages/portal/package.json
+++ b/packages/portal/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.10.9",
+  "version": "0.11.1",
   "name": "@filou/portal",
   "description": "",
   "author": "Benjamin Kniffler <bkniffler@me.com>",
@@ -9,6 +9,9 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "antd": "^3.6.2"
+    "@filou/core": "^0.11.0",
+    "antd": "^3.8.4",
+    "react-scrolllock": "^3.0.1",
+    "react-swipeable": "^4.3.0"
   }
 }
