--- a/packages/static-server/package.json
+++ b/packages/static-server/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.11.9",
+  "version": "0.11.19",
   "name": "@filou/static-server",
   "description": "",
   "author": "Benjamin Kniffler <bkniffler@me.com>",
@@ -8,17 +8,19 @@
     "Philipp Achenbach <olymp@philipp-achenbach.de>"
   ],
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.52",
-    "@google/maps": "^0.5.4",
+    "@babel/runtime": "^7.0.0",
+    "@google/maps": "^0.5.5",
     "axios": "^0.18.0",
+    "babel-runtime": "^6.26.0",
+    "chokidar": "^2.0.4",
     "date-fns": "^1.29.0",
     "evernote": "^2.0.5",
     "front-matter": "^2.3.0",
-    "fs-extra": "^6.0.1",
-    "glob": "^7.1.2",
+    "fs-extra": "^7.0.0",
+    "glob": "^7.1.3",
     "hast-util-to-mdast": "^2.1.0",
     "himalaya": "^1.1.0",
-    "mdast-squeeze-paragraphs": "^3.0.2",
+    "mdast-squeeze-paragraphs": "^3.0.3",
     "mime": "^2.3.1",
     "node-dir": "^0.1.17",
     "rehype-parse": "^4.1.0",
@@ -26,5 +28,8 @@
     "remark-stringify": "^5.0.0",
     "unified": "^7.0.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "react-static": "^5.9.7"
+  }
 }
