--- a/packages/static/package.json
+++ b/packages/static/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.11.15",
+  "version": "0.11.18",
   "name": "@filou/static",
   "description": "",
   "author": "Benjamin Kniffler <bkniffler@me.com>",
@@ -9,13 +9,15 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "google-map-react": "^1.0.5",
-    "react-markdown": "^3.3.4",
+    "@filou/core": "^0.11.0",
+    "filou": "^0.11.6",
+    "google-map-react": "^1.0.6",
+    "react-markdown": "^3.4.1",
     "react-sticky": "^6.0.3",
-    "slugify": "^1.3.0",
+    "slugify": "^1.3.1",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "react-static": "6.0.0-beta.14"
+    "react-static": "^6.0.0-beta.14"
   }
 }
