--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "clean": "del packages/**/*.js && del packages/**/*.js.map",
     "prepublishOnly": "npm run build",
     "up": "yarn upgrade-interactive --latest",
-    "up2": "lerna exec --concurrency 1 -- npm-check -u",
     "publish": "lerna publish",
     "rename": "rename packages/**/*.js {{f}}.es6"
   },
@@ -43,45 +42,45 @@
     "recompose": "0.26"
   },
   "devDependencies": {
-    "@babel/runtime": "^7.0.0-beta.52",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.0.1",
-    "babel-plugin-import": "^1.6.7",
+    "@babel/cli": "7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-bind": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
+    "babel-plugin-import": "^1.8.0",
     "babel-plugin-lodash": "3.3.4",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-imports": "^1.5.0",
-    "babel-plugin-transform-react-constant-elements": "^6.23.0",
-    "babel-plugin-transform-react-inline-elements": "^6.22.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.0.0",
-    "eslint-config-prettier": "^2.6.0",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.1",
+    "gulp-babel": "^8.0.0",
     "gulp-changed": "^3.2.0",
     "gulp-debug": "^4.0.0",
     "gulp-plumber": "^1.2.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-watch": "^5.0.0",
-    "lerna": "^2.11.0",
-    "prettier-eslint": "^8.2.0",
-    "require-json5": "^1.0.2"
-  },
-  "devDependenciesBabel7": {
-    "@babel/cli": "7.0.0-beta.49",
-    "@babel/core": "^7.0.0-beta.49",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.49",
-    "@babel/preset-env": "^7.0.0-beta.49",
-    "@babel/preset-react": "^7.0.0-beta.49",
-    "@babel/preset-stage-0": "^7.0.0-beta.49",
-    "gulp-babel": "^8.0.0-beta.2"
+    "lerna": "^3.2.1",
+    "prettier-eslint": "^8.2.0"
   }
 }
