--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,16 +10,24 @@
   "license": "MIT",
   "dependencies": {
     "classnames": "^2.2.6",
-    "particles.js": "^2.0.0",
-    "react-beautiful-dnd": "^7.1.2",
-    "react-dimensions": "^1.3.1",
-    "react-fela": "^8.0.0",
     "react-gravatar": "^2.6.3",
-    "react-resize-detector": "^3.1.1",
-    "react-scrolllock": "^3.0.1",
-    "react-swipeable": "^4.3.0",
     "scrollparent": "^2.0.1",
     "shortid": "^2.2.13",
-    "tinycolor2": "^1.4.1"
+    "tinycolor2": "^1.4.1",
+    "fela": "^6.2.0",
+    "fela-monolithic": "^5.0.24",
+    "fela-plugin-custom-property": "^7.0.3",
+    "fela-plugin-embedded": "^5.2.10",
+    "fela-plugin-extend": "^6.0.8",
+    "fela-plugin-fallback-value": "^5.0.18",
+    "fela-plugin-friendly-pseudo-class": "^5.0.17",
+    "fela-plugin-named-keys": "^1.0.3",
+    "fela-plugin-prefixer": "^5.0.19",
+    "fela-plugin-unit": "^5.0.17"
+  },
+  "peerDependencies": {
+    "react": "^16.4.2",
+    "react-fela": "^8.0.0",
+    "react-dom": "^16.4.2"
   }
 }
