--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,10 @@
 {
-  "packages": ["packages/*"],
+  "packages": [
+    "packages/*"
+  ],
   "lerna": "2.0.0",
   "useWorkspaces": true,
-  "version": "0.13.20",
+  "version": "0.14.0",
   "npmClient": "npm",
   "registry": "https://registry.npmjs.org/"
 }
