--- a/packages/cropper/package.json
+++ b/packages/cropper/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.12.14",
+  "version": "0.14.0",
   "name": "@filou/cropper",
   "description": "",
   "author": "Benjamin Kniffler <bkniffler@me.com>",
@@ -7,7 +7,5 @@
     "Benjamin Kniffler <bkniffler@me.com>",
     "Philipp Achenbach <olymp@philipp-achenbach.de>"
   ],
-  "license": "MIT",
-  "dependencies": {},
-  "peerDependencies": {}
+  "license": "MIT"
 }
