--- a/packages/tabs/package.json
+++ b/packages/tabs/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.14.0",
+  "version": "0.14.1",
   "name": "@filou/tabs",
   "description": "",
   "author": "Philipp Achenbach <olymp@philipp-achenbach.de>",
@@ -7,5 +7,6 @@
     "Benjamin Kniffler <bkniffler@me.com>",
     "Philipp Achenbach <olymp@philipp-achenbach.de>"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "gitHead": "ac953f312ef0ed13d02ac2ebf52105f9411a6787"
 }
