--- a/lerna.json
+++ b/lerna.json
@@ -1,10 +1,8 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "lerna": "2.0.0",
+  "packages": ["packages/*"],
+  "lerna": "^3.0.0",
   "useWorkspaces": true,
-  "version": "0.14.0",
-  "npmClient": "npm",
+  "version": "0.14.1",
+  "npmClient": "yarn",
   "registry": "https://registry.npmjs.org/"
 }
