--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "clean": "del packages/**/*.js && del packages/**/*.js.map",
     "clean2": "del-cli packages/**/node_modules",
     "up": "yarn upgrade-interactive --latest",
-    "bumpo": "lerna exec --concurrency 1 -- yarn publish",
+    "bumpo": "lerna exec --concurrency 1 -- npm version patch",
     "publish": "lerna publish",
     "rename": "rename packages/**/*.js {{f}}.es6"
   },
