--- a/packages/lightbox/package.json
+++ b/packages/lightbox/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.14.0",
+  "version": "0.14.1",
   "name": "@filou/lightbox",
   "description": "",
   "author": "Benjamin Kniffler <bkniffler@me.com>",
@@ -10,5 +10,6 @@
   "license": "MIT",
   "dependencies": {
     "aphrodite": "^2.2.3"
-  }
+  },
+  "gitHead": "ac953f312ef0ed13d02ac2ebf52105f9411a6787"
 }
