--- a/packages/loader/package.json
+++ b/packages/loader/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.14.0",
+  "version": "0.14.1",
   "name": "@filou/loader",
   "description": "",
   "author": "Philipp Achenbach <olymp@philipp-achenbach.de>",
@@ -13,5 +13,6 @@
     "react-fela": "^8.0.0",
     "react-swipeable": "^4.3.0",
     "tinycolor2": "^1.4.1"
-  }
+  },
+  "gitHead": "ac953f312ef0ed13d02ac2ebf52105f9411a6787"
 }
