--- a/packages/menu-antd/package.json
+++ b/packages/menu-antd/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.14.0",
+  "version": "0.14.1",
   "name": "@filou/menu-antd",
   "description": "",
   "author": "Philipp Achenbach <olymp@philipp-achenbach.de>",
@@ -10,5 +10,6 @@
   "license": "MIT",
   "dependencies": {
     "antd": "^3.8.4"
-  }
+  },
+  "gitHead": "ac953f312ef0ed13d02ac2ebf52105f9411a6787"
 }
