--- a/packages/static-server/package.json
+++ b/packages/static-server/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.14.0",
+  "version": "0.14.1",
   "name": "@filou/static-server",
   "description": "",
   "author": "Benjamin Kniffler <bkniffler@me.com>",
@@ -31,5 +31,6 @@
   "license": "MIT",
   "devDependencies": {
     "react-static": "^5.9.7"
-  }
+  },
+  "gitHead": "ac953f312ef0ed13d02ac2ebf52105f9411a6787"
 }
