--- a/packages/evernote/package.json
+++ b/packages/evernote/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.14.8",
+  "version": "0.14.9",
   "name": "@filou/evernote",
   "description": "",
   "author": "Benjamin Kniffler <bkniffler@me.com>",
@@ -25,8 +25,6 @@
     "slugify": "^1.3.1"
   },
   "license": "MIT",
-  "devDependencies": {
-    "react-static": "^5.9.7"
-  },
+  "devDependencies": {},
   "gitHead": "ac953f312ef0ed13d02ac2ebf52105f9411a6787"
 }
