--- a/packages/static-server/package.json
+++ b/packages/static-server/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.14.8",
+  "version": "0.14.9",
   "name": "@filou/static-server",
   "description": "",
   "author": "Benjamin Kniffler <bkniffler@me.com>",
@@ -29,8 +29,6 @@
     "unified": "^7.0.0"
   },
   "license": "MIT",
-  "devDependencies": {
-    "react-static": "^5.9.7"
-  },
+  "devDependencies": {},
   "gitHead": "ac953f312ef0ed13d02ac2ebf52105f9411a6787"
 }
