--- a/packages/menu/package.json
+++ b/packages/menu/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.14.11",
+  "version": "0.14.12",
   "name": "@filou/menu",
   "description": "",
   "author": "Philipp Achenbach <olymp@philipp-achenbach.de>",
@@ -9,9 +9,10 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "react-fela": "^8.0.0",
-    "react-swipeable": "^4.3.0",
     "tinycolor2": "^1.4.1"
+  },
+  "peerDependencies": {
+    "react-fela": "^8.0.0"
   },
   "gitHead": "ac953f312ef0ed13d02ac2ebf52105f9411a6787"
 }
