--- a/lerna.json
+++ b/lerna.json
@@ -1,10 +1,8 @@
 {
-  "packages": [
-    "packages/*"
-  ],
+  "packages": ["packages/*"],
   "lerna": "^3.0.0",
   "useWorkspaces": true,
-  "version": "0.14.12",
+  "version": "0.15.0",
   "npmClient": "yarn",
   "registry": "https://registry.npmjs.org/"
 }
