--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,10 @@
 {
-  "packages": ["packages/*"],
+  "packages": [
+    "packages/*"
+  ],
   "lerna": "^3.0.0",
   "useWorkspaces": true,
-  "version": "0.15.0",
+  "version": "0.15.1",
   "npmClient": "yarn",
   "registry": "https://registry.npmjs.org/"
 }
